# dune-rust

./: .gitignore  Cargo.toml  check.sh  night-attack-checksums-correct.txt  rustfmt.toml
assets/: HARK.SAL  PALACE.SAL  SIET.SAL  VILG.SAL
blit/: Cargo.toml
blit/src/: lib.rs
bytes_ext/: Cargo.toml
bytes_ext/src/: lib.rs  read_bytes_ext.rs  write_bytes_ext.rs
crates/bin_read/: Cargo.toml
crates/bin_read/src/: lib.rs
crates/bin_read_derive/: Cargo.toml
crates/bin_read_derive/src/: lib.rs
crates/bytes_ext/: Cargo.toml
crates/bytes_ext/src/: lib.rs  read_bytes_ext.rs  u32_ext.rs
crates/draw_globe/: Cargo.toml
crates/draw_globe/src/: main.rs
crates/draw_hnm/: Cargo.toml
crates/draw_hnm/src/: main.rs
crates/draw_lipsync/: Cargo.toml
crates/draw_lipsync/src/: main.rs
crates/draw_night_attack/: Cargo.toml
crates/draw_night_attack/src/: countdown_timer.rs  main.rs
crates/draw_room/: Cargo.toml
crates/draw_room/src/: main.rs
crates/draw_sprite/: Cargo.toml
crates/draw_sprite/src/: main.rs
crates/dune/: Cargo.toml
crates/dune/src/: blit.rs  color.rs  font.rs  framebuffer.rs  globe_renderer.rs  image.rs  index_map.rs  intro_1.rs  lib.rs  lipsync.rs  palette.rs  point.rs  rect.rs  sprite.rs  sprite_blitter.rs  sprite_sheet.rs
crates/dune/src/attack/: mod.rs
crates/dune/src/hnm/: frame_header.rs  hnm_decoder.rs
crates/dune/src/room_renderer/: mod.rs  room.rs  room_sheet.rs
crates/globe_renderer/: Cargo.toml
crates/globe_renderer/src/: globe_renderer.rs
crates/lipsync/: Cargo.toml
crates/lipsync/src/: lib.rs  main.rs
crates/room_renderer/: Cargo.toml
crates/room_renderer/src/: galois_noise_generator.rs  lib.rs  room.rs  room_renderer.rs  room_sheet.rs
crates/savegame/: Cargo.toml
crates/savegame/src/: data.rs  lib.rs  rle.rs
crates/wasm_attack/: Cargo.toml  build.sh  publish.sh
crates/wasm_attack/assets/: index.html
crates/wasm_attack/src/: lib.rs
crates/wasm_globe/: Cargo.toml  build.sh  publish.sh  serve.sh
crates/wasm_globe/assets/: index.html
crates/wasm_globe/src/: lib.rs
crates/wasm_lipsync/: Cargo.toml  build-and-serve.sh  build.sh
crates/wasm_lipsync/src/: lib.rs
crates/wasm_room/: Cargo.toml
crates/wasm_room/src/: lib.rs
crates/wasm_video/: Cargo.toml  publish.sh  watch-and-serve.sh
crates/wasm_video/assets/: index.html
crates/wasm_video/src/: lib.rs
draw_hnm/: Cargo.toml
draw_hnm/src/: main.rs
draw_night_attack/: Cargo.toml
draw_night_attack/src/: countdown_timer.rs  main.rs
draw_room/: Cargo.toml
draw_room/src/: main.rs
draw_sprite/: Cargo.toml  extract.sh
draw_sprite/src/: main.rs
dune/: Cargo.toml
dune/src/: blit.rs  dat_file.rs  hsq.rs  lib.rs
dune/src/hnm/: hnm_decoder.rs  mod.rs
framebuffer/: Cargo.toml
framebuffer/src/: framebuffer.rs  index_map.rs  lib.rs  pal.rs  palette.rs
globe_renderer/: Cargo.toml
globe_renderer/src/: globe_renderer.rs  lib.rs
lipsync/: Cargo.toml
lipsync/src/: lib.rs  main.rs
room_renderer/: Cargo.toml
room_renderer/src/: room.rs  room_renderer.rs  room_sheet.rs
sprite/: Cargo.toml
sprite/src/: draw_builder.rs  lib.rs  sprite.rs  sprite_sheet.rs
wasm_globe/: .gitignore  Cargo.toml
wasm_globe/src/: lib.rs
wasm_lipsync/: Cargo.toml  publish.sh
wasm_lipsync/assets/: index.html
wasm_lipsync/output/: index.html
wasm_lipsync/src/: lib.rs
wasm_room/: Cargo.toml
wasm_room/src/: lib.rs
wasm_video/: Cargo.toml  build.sh
wasm_video/output/: index.html
wasm_video/src/: lib.rs
