[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
bytes_ext = { path = "crates/bytes_ext" }
clap = "4.5.38"
cpal = "0.16"
dune = { path = "crates/dune" }
globe_renderer = { path = "crates/globe_renderer" }
js-sys = "0.3.64"
lipsync = { path = "crates/lipsync" }
num = "0.4.3"
png = "0.18"
room_renderer = { path = "crates/room_renderer" }
serde = "1.0.219"
serde_json = "1.0.107"
serde-wasm-bindgen = "0.6.0"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = "0.3.64"
