[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
bin_read = { path = "crates/bin_read" }
bytes_ext = { path = "crates/bytes_ext" }
clap = "4.5.38"
cpal = "0.16"
dune = { path = "crates/dune" }
js-sys = "0.3.64"
num = "0.4.3"
png = "0.18"
rand = { version = "0.9.2", default-features = false, features = ["small_rng"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.107"
serde-wasm-bindgen = "0.6.0"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = "0.3.64"
savegame = { path = "crates/savegame" }
