[package]
name = "globe_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
framebuffer = { workspace = true }
bytes_ext = { workspace = true }
sprite = { workspace = true }

[[bin]]
name = "draw_globe"
path = "src/bin/draw_globe.rs"
