[package]
name = "room_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes_ext = { path = "../bytes_ext" }
framebuffer = { path = "../framebuffer" }
serde = { version = "1.0.215", features = ["derive"] }
sprite = { path = "../sprite" }
