[package]
name = "wasm_room"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
framebuffer = { path = "../framebuffer" }
bytes_ext = { path = "../bytes_ext" }
room_renderer = { path = "../room_renderer" }
sprite = { path = "../sprite" }
js-sys = "0.3.64"
serde-wasm-bindgen = "0.6.0"
serde_json = "1.0.107"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = {version="0.3.64", features=[
	"console",
    "CanvasRenderingContext2d",
    "Document",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "ImageData",
    "InputEvent",
    "MouseEvent",
    "Performance",
    "Response",
    "Window",
]}
serde = "1.0.215"
