[package]
name = "wasm_room"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
framebuffer = { workspace = true }
bytes_ext = { workspace = true }
room_renderer = { workspace = true }
sprite = { workspace = true }
js-sys = { workspace = true }
serde-wasm-bindgen = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["console", "CanvasRenderingContext2d", "Document", "HtmlCanvasElement", "HtmlInputElement", "ImageData", "InputEvent", "MouseEvent", "Performance", "Response", "Window"] }
serde = { workspace = true }
