[package]
name = "wasm_video"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bytes_ext = { workspace = true }
dune = { workspace = true }
framebuffer = { workspace = true }
js-sys = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = [
	"console",
	"CanvasRenderingContext2d",
	"Document",
	"HtmlCanvasElement",
	"HtmlInputElement",
	"ImageData",
	"InputEvent",
	"MouseEvent",
	"Performance",
	"Response",
	"Window"
] }
