[package]
name = "wasm_room"
version = "0.0.0"
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
bytes_ext = { workspace = true }
dune = { workspace = true }
js-sys = { workspace = true }
serde-wasm-bindgen = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = [
	"console",
	"CanvasRenderingContext2d",
	"Document",
	"HtmlCanvasElement",
	"HtmlInputElement",
	"ImageData",
	"InputEvent",
	"MouseEvent",
	"Performance",
	"Response",
	"Window"
] }
serde = { workspace = true }
